--- a/News/Base.lproj/Main.storyboard
+++ b/News/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="VW5-oL-HlW">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="68" width="414" height="745"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="IPY-6g-FCs">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -30,13 +30,22 @@
                                     <outlet property="delegate" destination="Cme-fN-X3C" id="Xs2-hq-aSJ"/>
                                 </connections>
                             </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Head Lines of US" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HkZ-Fq-MSD">
+                                <rect key="frame" x="0.0" y="44" width="414" height="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SiO-kg-ogN"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="HkZ-Fq-MSD" firstAttribute="top" secondItem="SiO-kg-ogN" secondAttribute="top" id="6sn-rN-WlS"/>
                             <constraint firstItem="SiO-kg-ogN" firstAttribute="trailing" secondItem="VW5-oL-HlW" secondAttribute="trailing" id="GhV-Xd-TOE"/>
                             <constraint firstItem="VW5-oL-HlW" firstAttribute="leading" secondItem="SiO-kg-ogN" secondAttribute="leading" id="OKR-SZ-4ny"/>
-                            <constraint firstItem="VW5-oL-HlW" firstAttribute="top" secondItem="SiO-kg-ogN" secondAttribute="top" id="fnH-WB-b33"/>
+                            <constraint firstItem="VW5-oL-HlW" firstAttribute="top" secondItem="HkZ-Fq-MSD" secondAttribute="bottom" id="d57-v4-M47"/>
+                            <constraint firstItem="HkZ-Fq-MSD" firstAttribute="leading" secondItem="SiO-kg-ogN" secondAttribute="leading" id="iAv-V7-r9D"/>
+                            <constraint firstItem="SiO-kg-ogN" firstAttribute="trailing" secondItem="HkZ-Fq-MSD" secondAttribute="trailing" id="qiy-Wj-MHq"/>
                             <constraint firstItem="SiO-kg-ogN" firstAttribute="bottom" secondItem="VW5-oL-HlW" secondAttribute="bottom" id="ttA-RI-023"/>
                         </constraints>
                     </view>
@@ -47,7 +56,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GnX-nk-BtG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1166" y="408"/>
+            <point key="canvasLocation" x="1165.217391304348" y="407.8125"/>
         </scene>
         <!--List View-->
         <scene sceneID="xVu-at-OKS">
@@ -57,21 +66,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="S1f-WA-vAu">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="S1f-WA-vAu">
+                                <rect key="frame" x="0.0" y="78" width="414" height="735"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="jEo-2V-hNh" id="kf4-DM-qWW"/>
                                     <outlet property="delegate" destination="jEo-2V-hNh" id="6FF-6O-qkl"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Head Lines of US" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SNe-9W-n9s">
+                                <rect key="frame" x="0.0" y="54" width="414" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cin-aG-iHQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="SNe-9W-n9s" firstAttribute="leading" secondItem="cin-aG-iHQ" secondAttribute="leading" id="L5D-C5-BUy"/>
+                            <constraint firstItem="S1f-WA-vAu" firstAttribute="top" secondItem="SNe-9W-n9s" secondAttribute="bottom" id="Oyq-RV-WSc"/>
                             <constraint firstItem="cin-aG-iHQ" firstAttribute="trailing" secondItem="S1f-WA-vAu" secondAttribute="trailing" id="ToU-aN-WX5"/>
+                            <constraint firstItem="cin-aG-iHQ" firstAttribute="trailing" secondItem="SNe-9W-n9s" secondAttribute="trailing" id="Xlh-as-8wX"/>
+                            <constraint firstItem="SNe-9W-n9s" firstAttribute="top" secondItem="cin-aG-iHQ" secondAttribute="top" constant="10" id="kQ6-nv-4uh"/>
                             <constraint firstItem="S1f-WA-vAu" firstAttribute="leading" secondItem="cin-aG-iHQ" secondAttribute="leading" id="miN-Ok-8on"/>
-                            <constraint firstItem="S1f-WA-vAu" firstAttribute="top" secondItem="cin-aG-iHQ" secondAttribute="top" id="pih-A1-5Cs"/>
                             <constraint firstItem="cin-aG-iHQ" firstAttribute="bottom" secondItem="S1f-WA-vAu" secondAttribute="bottom" id="vSH-1u-CMC"/>
                         </constraints>
                     </view>
@@ -108,9 +126,6 @@
         <image name="rectangle.grid.2x2.fill" catalog="system" width="128" height="99"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
