--- a/News/Cells/TableViewCells/NewsTableViewCell.xib
+++ b/News/Cells/TableViewCells/NewsTableViewCell.xib
@@ -23,7 +23,7 @@
                             <constraint firstAttribute="height" constant="250" id="WwI-5P-nHQ"/>
                         </constraints>
                     </imageView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="loI-pS-BR9">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="loI-pS-BR9" customClass="LikeButton" customModule="News" customModuleProvider="target">
                         <rect key="frame" x="330" y="0.0" width="71" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="mVu-nT-8e9"/>
@@ -34,7 +34,7 @@
                             <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </buttonConfiguration>
                         <connections>
-                            <action selector="likeButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="v4s-Eu-pOz"/>
+                            <action selector="likeButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="haf-9e-DoS"/>
                         </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TNj-t4-ypv">
@@ -79,10 +79,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="LikeButton" destination="loI-pS-BR9" id="r9j-Qg-XiY"/>
                 <outlet property="NewsImageView" destination="7aY-xL-TkB" id="24q-J6-g5b"/>
                 <outlet property="NewsTitle" destination="flO-nG-dnM" id="fMB-ku-YJp"/>
                 <outlet property="dateTitle" destination="pSs-er-fcR" id="o3t-tR-Z5q"/>
+                <outlet property="likeButton" destination="loI-pS-BR9" id="NoE-3M-9ez"/>
             </connections>
             <point key="canvasLocation" x="221.73913043478262" y="217.29910714285714"/>
         </tableViewCell>
