--- a/News/Cells/CollectionViewCells/NewsCollectionViewCell.xib
+++ b/News/Cells/CollectionViewCells/NewsCollectionViewCell.xib
@@ -33,6 +33,9 @@
                                 <buttonConfiguration key="configuration" style="filled" image="heart" catalog="system" title="Like">
                                     <color key="baseBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="likeButtonTapped:" destination="gTV-IL-0wX" eventType="touchUpInside" id="6m0-Zx-7V1"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fM4-IR-xqd">
                                 <rect key="frame" x="10" y="207" width="359" height="64"/>
